# work-sample-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/diag_session_srv/: default_mode.rs  mod.rs
cli/src/read_data_by_id_srv/: adc.rs  bike_state.rs  bms.rs  error_code.rs  firmware_version.rs  imu.rs  keyfob.rs  mod.rs  performance.rs  switch_gear.rs
cli/src/reset_ecu_srv/: ble.rs  cendric.rs  imx.rs  lizard.rs  lte.rs  mod.rs  rt.rs  soft_reset_ecu.rs  tm.rs  wifi.rs
cli/src/routine_control_srv/: disable_imx_hmi.rs  disable_imx_lte.rs  enable_imx_hmi.rs  enable_imx_lte.rs  mod.rs  simulate_input.rs  switch_usb_otg_usb_host.rs  trigger_output.rs
ecu-diag/: Cargo.toml
ecu-diag/src/: lib.rs
ecu-diag/src/api/: mod.rs
ecu-diag/src/core/: channel.rs  dtc.rs  dynamic_diag.rs  mod.rs
ecu-diag/src/hardware/: isotp.rs  mod.rs  software_isotp.rs  tcp.rs
ecu-diag/src/hardware/pcan_usb/: lib_funcs.rs  mod.rs  pcan_api.rs  pcan_types.rs
ecu-diag/src/uds/: communication_control.rs  control_dtc_setting.rs  diagnostic_session_control.rs  ecu_reset.rs  errors.rs  link_control.rs  mod.rs  read_data_by_id.rs  read_dtc_info.rs  routine_control.rs  security_access.rs  tester_present.rs
gui-external/: Cargo.toml
gui-external/src/: main.rs
gui-external/ui/: iot-dashboard.slint  main.slint
gui-external/ui/images/: ionmobility_logo.jfif
gui-internal/: Cargo.toml
gui-internal/src/: app.slint  main.rs  monitor.slint  service.slint  uds_client.rs
