[package]
name = "ion-diagnostic-cli"
authors = ["ION MOBILITY"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecu-diag = { path = "../ecu-diag" } # this is our lib defined as external crate
clap = { version = "4.4.18", features = ["derive"] }