[package]
name = "ion-diagnostic"
authors = ["ION MOBILITY"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecu-diag = { path = "../ecu-diag" } # this is our lib defined as external crate
slint = { version = "1.3" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"]}
open = "5"
tokio = { version = "1.24.2", features= ["full"] }
serde_json = { version = "1.0.79" }
log="0.4.16"

[build-dependencies]
slint-build = { version = "1.3" }